update about me

--- a/about-me.html
+++ b/about-me.html
@@ -102,10 +102,11 @@
     </ul>
     <h2>My favorite things:</h2>
      <ul class="things">
-       <li>My cat 🐱</li>
-       <li>Dungeons & Dragons 🐉</li>
-       <li>Stardew Valley ⭐️</li>
-       <li>Crossing off places to visit on my bucket list 🌎</li>
+       <li>🐱 My cat </li>
+       <li>🐉 Dungeons & Dragons </li>
+       <li>⭐️ Stardew Valley </li>
+       <li>✈️ Travelling </li>
+       <li>🪑 Antiquing </li>
      </ul>
       <a href="documents/resume_ricks.pdf" class="button"> Download my resume </a>
   </div>
