added before/after buttons to case studies
prepped horizonatal menu for html
preppred landscaping case study

--- a/about-me.html
+++ b/about-me.html
@@ -94,6 +94,7 @@
     <h2>My favorite tools:</h2>
     <ul class="tools">
       <li><i class="fab fa-figma fa-2x"></i></li>
+      <li><i class="fab fa-sketch fa-2x"></i></li>
       <li><i class="fab fa-invision fa-2x"></i></li>
       <li><i class="fab fa-github-square fa-2x"></i></li>
       <li><i class="fab fa-html5 fa-2x"></i></li>
