--- a/busybus.html
+++ b/busybus.html
@@ -179,6 +179,12 @@
       <p>My final design for BusyBus stuck to my original purpose: to help users find important information in an easy-to-digest way.</p>
       </section>
     </div>
+
+    <div>
+      <a href="/ricks.html" class="previous">&laquo; Ricks Landscaping</a>
+      <a href="/medchat.html" class="next">Medchat &raquo;</a>
+    </div>
+
     <!-- connect with me -->
       <section class="connect">
         <br>
