--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
      <br>
      <div class="welcome">
 		   <h1>Hello, I'm Imani! (ee-mahn-ee) <span class="animate__swing"> 👋🏾 </span> </h1>
-          <p>A Product Designer and researcher based in Charlotte, NC. </p>
+          <p>Product Designer and Researcher based in Charlotte, NC. </p>
            </div>
       </div>
        </section>
@@ -98,7 +98,7 @@
        </div>
        <div class="project_content">
         <aside class="ricks">
-          <a href="https://www.rickslandscapeservices.com/"><img src="images/ricks_mockup.svg" class="trovepic" alt="mockup"></a>
+          <a href="/ricks.html"><img src="images/ricks_mockup.svg" class="trovepic" alt="mockup"></a>
         </aside>
         </div>
      <div class="project_content">
