--- a/medchat.html
+++ b/medchat.html
@@ -65,13 +65,14 @@
    </nav>
   <section class="projecthero">
     <!-- start case study -->
-    <br>
-    <br>
-    <br>
-    <br>
+
     <img src="images/medchatmockup3.png" alt="mockup image" class="projecthero" >
+
     <a href="https://invis.io/UJY4D4A47RC" target="_blank" class="button">View finished prototype</a>
   </section>
+
+
+
   <!-- flexbox -->
   <div class="header-box">
   <div class="roles info-section">
@@ -99,6 +100,8 @@
     <li>Sketch</li>
   </div>
 </div>
+
+
     <!-- problem and solution-->
   <div class="projectmain">
     <section class="problem">
@@ -221,7 +224,10 @@
     <p>Medchat offers users an intuitive application experience and provides an alternative to overcrowded and confusing homepages.
       Medchat presents an opportunity for providers and patients to benefit from easier communication. </p>
     </section>
-</div>
+  </div>
+      <div>
+        <a href="/skyprint.html" class="next">Skyprint &raquo;</a>
+      </div>
 
 
     <!-- connect with me -->
@@ -234,6 +240,7 @@
          <p>Please reach out if you want to chat or have any questions!</p>
          <a href="/contact.html" class="button">Message me</a>
        </section>
+
        <!-- footer -->
          <footer class="footer">
            <ul class="socialmedia">
@@ -269,5 +276,5 @@
            </script>
 
  </body>
-
+        </div>
 </html>
