--- a/skyprint.html
+++ b/skyprint.html
@@ -177,6 +177,10 @@
     </section>
 </div>
 
+<div>
+  <a href="/medchat.html" class="previous">&laquo; MedChat</a>
+  <a href="/ricks.html" class="next">Ricks Landscaping &raquo;</a>
+</div>
 
     <!-- connect with me -->
       <section class="connect">
