--- a/about-me.html
+++ b/about-me.html
@@ -58,8 +58,8 @@
     <div class="navbarlinks">
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
-        <li><a class="active" id="about_me" href="/about-me.html">About</a></li>
-        <li><a id="work" href="/index.html#worksection">Work</a></li>
+        <li><a id="about_me" href="/about-me.html">About</a></li>
+        <li><a class="active" id="work" href="/index.html#worksection">Work</a></li>
       </ul>
     </div>
    </nav>
@@ -132,7 +132,7 @@
           <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
           <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
          </ul>
-         <p>Designed and Developed by Imani Ricks 2020</p>
+         <p>Designed and hand-coded by Imani Ricks 2020</p>
        </footer>
      </div>
      <!-- button on scroll -->
