--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-angle-up fa-2x"></i></button>
  <div class="container">
-
+<!--Hi welcome to my code. This was all done without the help of a site builder or even a framework. :) It's not perfect but it's mine. -Imani -->
    <!-- nav bar -->
   <nav class="navbar">
     <div>
