--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,8 @@
 
 <body>
   <!-- nav bar -->
- <nav class="navbar">
+ <div class= "navbar">
+ <nav>
    <div>
      <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo"></a>
    </div>
@@ -33,7 +34,7 @@
      </ul>
    </div>
   </nav>
-
+</div>
 
    <br>
    <br>
