--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
  <div class="container">
 <!--Hi welcome to my code. This was all done without the help of a site builder or even a framework. :) It's not perfect but it's mine. -Imani -->
    <!-- nav bar -->
-  <nav class="navbar">
+  <div class= "navbar">
+  <nav>
     <div>
       <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo"></a>
     </div>
@@ -65,6 +66,7 @@
       </ul>
     </div>
    </nav>
+ </div>
 <!-- hero image -->
 	 <section class="hero">
      <br>
