--- a/ricks.html
+++ b/ricks.html
@@ -51,7 +51,8 @@
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-angle-up fa-2x"></i></button>
  <div class="container">
    <!-- nav bar -->
-  <nav class="navbar">
+  <div class= "navbar">
+  <nav>
     <div>
       <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo"></a>
     </div>
@@ -63,7 +64,8 @@
       </ul>
     </div>
    </nav>
-
+ </div>
+ 
   <section class="projecthero">
     <!-- start case study -->
     <img src="images/ricksdesktop.png" alt="mockup image" class="projecthero" >
