--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
      <br>
      <div class="welcome">
 		   <h1>Hello, I'm Imani! (ee-mahn-ee) <span class="animate__swing"> 👋🏾 </span> </h1>
-          <p>Product Designer and Researcher based in Charlotte, NC. </p>
+          <p>Product Designer and accesibility advocate based in Charlotte, NC. </p>
            </div>
       </div>
        </section>
