--- a/about-me.html
+++ b/about-me.html
@@ -111,7 +111,7 @@
        <li>✈️ Travelling </li>
        <li>🪑 Antiquing </li>
      </ul>
-      <a href="documents/resume_ricks.pdf" class="button"> Download my resume </a>
+      <a href="documents/Imani Resume v1 .pdf" class="button"> Download my resume </a>
   </div>
 
 
