--- a/medchat.html
+++ b/medchat.html
@@ -128,7 +128,7 @@
          and the features they would most like to see in future applications.</p>
         <aside>
         <img src="images/mcsurvey.png" alt="user survey image" class="medchatmockup">
-        <a href="https://docs.google.com/spreadsheets/d/1AuDIjE_LeFvHWjQdIg0y05SwsT7R_9zStSk2qE3CP9o/edit?usp=sharing" target="_blank" class="button">View more</a>
+        <a href="https://docs.google.com/document/d/1SVJxMygnAxGbpwQr2ce4u8Hh_Y7aoMJ9u3q_S5LSK8Q/edit" target="_blank" class="button">View more</a>
         </aside>
      </section>
       <!-- competitive analysis -->
@@ -151,8 +151,10 @@
           <p>I was able to craft user personas based on the information gathered in the survey. Demographically,
             the respondents were majority female (80%), and aged between 25-54 (80%).
            </p>
+          <img src="images/blueguy.png" alt="user persona image" class="sketch">
           <img src="images/medchat/redlady.svg" alt="user persona image" class="sketch">
           <img src="images/medchat/yellow lady.svg" alt="user persona image" class="sketch">
+          <a href="https://www.figma.com/file/e8SW1rpkZzEZ83062yQytg/Medical-Personas?node-id=63%3A0" target="_blank" class="button fade-scroll">View more</a>
          </section>
     <!-- user stories -->
     <section>
@@ -193,27 +195,7 @@
     <img src="images/medchat/MedChatstyleguide.jpg" alt="sketches" class="medchatmockup">
 
 
-<!-- high-fidelity mockups-->
-  <section class="mockups">
-    <h2>Mockups:</h2>
-    <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-    <img src="images/medchat/mc1.png" alt="mockup image" class="medchatmockup">
-    <a href="https://invis.io/U2XQQ7PN9E8" target="_blank" class="button">View more</a>
-    </section>
 
-  <!-- usability tests-->
-  <div class="userflow">
-    <h2>Usability Tests:</h2>
-    <p>I conducted testing on my first round of high fidelity mockups using maze.design
-       to understand if there were any issues that needed to be addressed before moving forward.
-      </p>
-      <img src="images/medchat/maze.png" alt="trove moodboard" class="medchatmockup">
-      <br>
-      <p>I found that users were having trouble with navigating the log-in page and the inbox/messages.<br><br>
-        I decided that I needed to address these issues in my next version of the design. By changing the login screen CTAs
-        and reviewing the labels used for the inbox/messaging center.
-        </p>
-    </div>
 
   <!-- final project -->
   <section>
