--- a/medchat.html
+++ b/medchat.html
@@ -137,11 +137,6 @@
         <img src="images/myhealthanalysis.png" alt="user survey image" class="medchatmockup">
         <p>An opportunity exists in this market that is mostly dominated by MyChart. An application that could
           take some of the most popular features of the MyChart application and cut out some of the unnecessary features would be able to gain market share quickly.
-          An application that can market itself to both families,
-          like healow with its multiple account management, and individuals would be the most successful.
-           MyChart has also found success with integrating some features with Apple Watch, however, appointments made in
-           the application cannot easily sync with Google, Outlook, or other applications. An app that takes into account the other technology available to their clients might do well.
-
         </p>
             <a href="https://docs.google.com/document/d/1kF1auQUzz9Y78F0U1aUMGWyYD7WaEPXr03TKNxQtFBQ/edit?usp=sharing" target="_blank" class="button fade-scroll">View more</a>
        </section>
@@ -163,6 +158,10 @@
         Below are the highest prority user stories: </p>
       <img src="images/medchat/usersurveyresponses1.png" alt="user stories image" class="center">
       <a href="https://docs.google.com/spreadsheets/d/19FFi336tp-7AefScqzLHkzyhhFTLIohiuIsehttFe1s/edit?usp=sharing" target="_blank" class="button">View more</a>
+      <p>An important take away from my research analysis was the need to simplify the process for creating appointments. Here's a look at the user flow of the MyChart application
+        and the userflow that I created for MedChat.</p>
+        <img src="images/medchat/userflow_mychart.png" alt="user survey image" class="medchatmockup">
+        <img src="images/medchat/userflow_medchat.png" alt="user survey image" class="medchatmockup">
      </section>
 
   <!-- wireframe -->
@@ -181,8 +180,8 @@
          <img src="images/medchat/Homepage2.png" alt="screen" class="user">
          <img src="images/medchat/Homepage3.png" alt="screen" class="user">
          <aside>
-         <img src="images/medchat/piechart.png" alt="preference graph" class="graph">
          <p>Overall, the majority of users indicated a preference for homepage #2.</p>
+         <img src="images/medchat/piechart.png" alt="preference graph" class="graph">
          </aside>
        </section>
    <!-- branding-->
