--- a/medchat.html
+++ b/medchat.html
@@ -200,6 +200,12 @@
   <section>
     <h2>Final Design:</h2>
     <br>
+    <video width="600" height="400" autoplay class="medchatmockup">
+  <source src="videos/Jul-01-2021 11-27-49.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+    </video>
+    <br>
     <img src="images/medchat/mc2.png" alt="trove landing page" class="medchatmockup">
     <a href="https://invis.io/UJY4D4A47RC" target="_blank" class="button">View prototype</a>
   </section>
